feat: wire up and collect metrics during tests in Ansible automation
- Java: new SystemMetricsCollector polls OperatingSystemMXBean (CPU%) and
  GarbageCollectorMXBean (GC pause ms) during steady-state phase; wired into
  BenchmarkRunner so appCpuMedian + gcPauseMsTotal appear in every summary.json

- Ansible side-car collect_jvm_metrics.sh: discovers OJP PID via systemctl,
  streams jstat -gc output as a timestamped CSV with heap_used_mb (actual JVM
  heap, NOT OS RSS), heap_committed_mb, and GC event counts/times

- Ansible side-car collect_pg_metrics.sh: polls pg_stat_database,
  pg_stat_bgwriter, and pg_locks every 5 s into a timestamped CSV

- run_benchmarks.yml: resets PG stats pre-run; deploys side-cars via delegate_to;
  starts them as nohup background processes with PID files; stops and fetches
  CSVs into results/<run>/node_metrics/ after bench completes

- generate_report.sh: parses summary.json for bench JVM CPU/GC; parses
  node_metrics CSVs for OJP proxy JVM heap/GC and PostgreSQL stats; extends
  per-instance table to include CPU% and GC columns; adds proxy and DB sections

- docs/METRICS.md: replace ASCII diagrams with Mermaid (sequenceDiagram for
  latency scope, flowchart for collection pipeline + node tiers); update §5 from
  gaps/placeholders to documented-collected status; update §9 limitations

Agent-Logs-Url: https://github.com/rrobetti/ojp-performance-tester-tool/sessions/0e43bc76-d6b4-4ff7-82e0-32cdfe540539

Co-authored-by: rrobetti <7221783+rrobetti@users.noreply.github.com>